# appsec-discovery

./: .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: jekyll-gh-pages.yml  mkdocs.yml  python-package.yml
appsec-discovery/: README.md  pyproject.toml
appsec-discovery-service/: .env.example
appsec-discovery-service/discovery_api/: main.py  requirements.txt
appsec-discovery-service/discovery_nginx/: nginx.conf
appsec-discovery-service/discovery_scanner/: config.py  main.py
appsec-discovery-service/discovery_ui/: Dockerfile  package-lock.json
appsec-discovery/appsec_discovery/: cli.py
appsec-discovery/tests/: test_sample.py
appsec_discovery/: __init__.py  cli.py
appsec_discovery/models/: __init__.py  code_object.py  config.py  reports.py  uploads.py
appsec_discovery/parsers/: __init__.py  base_parser.py  parser_factory.py
appsec_discovery/services/: __init__.py  ai_service.py  report_service.py  scan_service.py  upload_service.py
appsec_discovery_service/: docker-compose.yml
appsec_discovery_service/discovery_scanner/: logger.py  requirements.txt
appsec_discovery_service/discovery_ui/: package.json
config/: index.html
contrib/: index.html
discovery_api/: Dockerfile  config.py
discovery_api/models/: __init__.py  models.py
discovery_scanner/: Dockerfile  config.py  main.py  requirements.txt
discovery_scanner/models/: models.py
discovery_scanner/services/: alert_service.py  db_service.py  gl_service.py  scan_service.py  score_service.py
discovery_scanner/sg_rules/: parse-clients.yaml  parse-proto.yaml  parse-sql.yaml
discovery_ui/src/: App.js  ScoreRuleList.js  authProvider.js
docs/: _config.yml  about.md  contrib.md  index.md  parsers.md
docs/config/: index.md
docs/parsers/: index.md
docs/quikstart/: index.md
parsers/: index.html
search/: search_index.json
tests/: test_ai_service.py  test_parser_factory.py  test_parser_golang.py  test_parser_graphql.py  test_parser_java.py  test_parser_protobuf.py  test_parser_python.py  test_parser_swagger.py  test_parser_terraform.py  test_report_service.py  test_scan_service.py
tests/config_samples/: ai_conf_llama.yaml  ai_conf_llama_8b.yaml  conf.yaml
tests/golang_samples/: main.go
tests/graphql_samples/: mutation.graphql  (+1 more)
(+42 files in other folders)
